--- a/src/webapp/template/signin.html
+++ b/src/webapp/template/signin.html
@@ -3,8 +3,8 @@
                 <h1>
                     <img alt="scubabook logo" src="{{ static_url("img/logo.png") }}">
                 </h1>
-                <div id="login-form">
-                    <form action="/auth/login/" method="post" id="login_form">
+                <div id="signin-form">
+                    <form action="/auth/signin/" method="post" id="signin_form">
                         <fieldset>
                             <label for="username">Username</label>
                             <input autocapitalize="off" autocorrect="off" class="text-input" id="username" name="username" tabindex="1" type="text" value="">
@@ -14,13 +14,9 @@
                             <label for="password">Password</label>
                             <input class="text-input" id="password" name="password" tabindex="2" type="password" value="">
                         </fieldset>
-                        <fieldset>
-                            <a href="/auth/signin/">Sign in</a>
-                            <span class="errormessage">{{errormessage}}</span>
-                        </fieldset>
 
                         <div id="form_btn">
-                            <input id="login-btn" class="btn btn-blue" type="submit" value="Log In" tabindex="3">
+                            <input id="signin-btn" class="btn btn-blue" type="submit" value="Sign In" tabindex="3">
                             <!-- <a href="/sb/"><input id="inscription-btn" class="btn btn-red" value="Inscription" tabindex="3"></a> -->
                         </div>
                     </form>
