--- a/src/webapp/template/article.html
+++ b/src/webapp/template/article.html
@@ -16,12 +16,12 @@
 
     <h2>References to:</h2>
     {% for to_id in tos %}
-      <p><a href="/article?id={{to_id[0]}}" >{{to_id[0]}}, {{to_id[1]}}</a></p>
+      <p><a href="/article/?id={{to_id[0]}}" >{{to_id[0]}}, {{to_id[1]}}</a></p>
     {% end %}
 
     <h2>References from:</h2>
     {% for from_id in froms %}
-      <p><a href="/article?id={{from_id[0]}}" >{{from_id[0]}}, {{from_id[1]}}</a></p>
+      <p><a href="/article/?id={{from_id[0]}}" >{{from_id[0]}}, {{from_id[1]}}</a></p>
     {% end %}
 
     <h2>Keywords:</h2>
