--- a/src/webapp/template/search.html
+++ b/src/webapp/template/search.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Enter terms below.</h1>
-    <form method="post" action="/searchresult">
+    <form method="post" action="/searchresult/">
       <p>Article id<br><input type="number" name="id"></p>
       <p>Article title<br><input type="text" name="title"></p>
       <p>Article author<br><input type="text" name="author"></p>
