--- a/src/webapp/template/searchresult.html
+++ b/src/webapp/template/searchresult.html
@@ -8,12 +8,12 @@
 
     <h2>Authors</h2>
     {% for article in articles %}
-      <p><a href="/article?id={{article[0]}}" >
+      <p><a href="/article/?id={{article[0]}}" >
         id = {{article[0]}}, title = {{article[1]}}, venue = {{article[2]}}, year = {{article[3]}}
       </a></p>
     {% end %}
 
-    <form method="post" action="/searchresult">
+    <form method="post" action="/searchresult/">
       <input type="number" name="id" value="{{id}}" hidden="True">
       <input type="text" name="title" value="{{title}}" hidden="True">
       <input type="text" name="author" value="{{author}}" hidden="True">
@@ -24,7 +24,7 @@
       <input type="submit" value="<-">
     </form>
 
-    <form method="post" action="/searchresult">
+    <form method="post" action="/searchresult/">
       <input type="number" name="id" value="{{id}}" hidden="True">
       <input type="text" name="title" value="{{title}}" hidden="True">
       <input type="text" name="author" value="{{author}}" hidden="True">
