draft for phase 2

--- a/src/webapp/template/search.html
+++ b/src/webapp/template/search.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Poem Maker Pro</title>
+    <title>Search result</title>
   </head>
   <body>
-    <h1>Enter terms below.</h1>
+    <h1>Enter search criterias.</h1>
     <form method="post" action="/searchresult/">
       <p>Article id<br><input type="number" name="id"></p>
       <p>Article title<br><input type="text" name="title"></p>
