--- a/src/webapp/template/article.html
+++ b/src/webapp/template/article.html
@@ -4,6 +4,10 @@
     <title>Article</title>
   </head>
   <body>
+    <form method="post" action="/article/delete/">
+      <input type="number" name="id" value="{{id}}" hidden="True">
+      <input type="submit" value="delete">
+    </form>
     <h1>{{title}}</h1>
     <p>id = {{id}}</p>
     <p>year = {{year}}</p>
@@ -11,7 +15,7 @@
 
     <h2>Authors</h2>
     {% for author in authors %}
-      <p>{{author[0]}}</p>
+      <p><a href="/author/?id={{author[0]}}" >{{author[1]}}</a></p>
     {% end %}
 
     <h2>References to:</h2>
