--- a/src/webapp/template/author.html
+++ b/src/webapp/template/author.html
@@ -8,6 +8,10 @@
       <input type="number" name="id" value="{{id}}" hidden="True">
       <input type="submit" value="delete">
     </form>
+    <form method="get" action="/author/update/">
+      <input type="number" name="id" value="{{id}}" hidden="True">
+      <input type="submit" value="update">
+    </form>
     <h1>{{name}}</h1>
     <p>id = {{id}}</p>
     <p>institute = {{institute}}</p>
