--- a/src/webapp/template/article.html
+++ b/src/webapp/template/article.html
@@ -8,6 +8,10 @@
       <input type="number" name="id" value="{{id}}" hidden="True">
       <input type="submit" value="delete">
     </form>
+    <form method="get" action="/article/update/">
+      <input type="number" name="id" value="{{id}}" hidden="True">
+      <input type="submit" value="update">
+    </form>
     <h1>{{title}}</h1>
     <p>id = {{id}}</p>
     <p>year = {{year}}</p>
