--- a/src/webapp/template/authorupdate.html
+++ b/src/webapp/template/authorupdate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Author</title>
+    <title>Author update</title>
   </head>
   <body>
     <h1>id = {{id}}</h1>
