--- a/src/webapp/template/signin.html
+++ b/src/webapp/template/signin.html
@@ -16,6 +16,7 @@
                         </fieldset>
 
                         <div id="form_btn">
+							<button>Lol</button>
                             <input id="signin-btn" class="btn btn-blue" type="submit" value="Sign In" tabindex="3">
                             <!-- <a href="/sb/"><input id="inscription-btn" class="btn btn-red" value="Inscription" tabindex="3"></a> -->
                         </div>
