--- a/src/webapp/template/search.html
+++ b/src/webapp/template/search.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
+{% extends main.html %}
+
+{% block head %}
     <title>Search result</title>
-  </head>
-  <body>
+{% end %}
+
+{% block body %}
     <h1>Enter search criterias.</h1>
     <form method="post" action="/searchresult/">
       <p>Article id<br><input type="number" name="id"></p>
@@ -14,5 +15,4 @@
       <p>Keyword<br><input type="text" name="keyword"></p>
       <input type="submit">
     </form>
-  </body>
-</html>
+{% end %}
