--- a/src/webapp/template/search.html
+++ b/src/webapp/template/search.html
@@ -5,6 +5,7 @@
 {% end %}
 
 {% block body %}
+<center>
     <h1>Enter search criterias.</h1>
     <form method="post" action="/searchresult/">
       <p>Article id<br><input type="number" name="id"></p>
@@ -15,4 +16,5 @@
       <p>Keyword<br><input type="text" name="keyword"></p>
       <input type="submit">
     </form>
+</center>
 {% end %}
