--- a/src/webapp/template/signin.html
+++ b/src/webapp/template/signin.html
@@ -1,4 +1,11 @@
-        <div id="main-container">
+{% extends main.html %}
+
+{% block head %}
+    <title>Sign In</title>
+{% end %}
+
+{% block body %}
+     <div id="main-container">
             <div id="main">
                 <h1>
                     <img alt="scubabook logo" src="{{ static_url("img/logo.png") }}">
@@ -23,3 +30,4 @@
                 </div>
             </div>
         </div>
+{% end %}
