--- a/src/webapp/template/main.html
+++ b/src/webapp/template/main.html
@@ -10,14 +10,18 @@
   			<h1>DMD project Phase#2.</h1>
   			<a href="/search/">Search</a>
   			<a href="/addarticle/">Add Article</a>
-  			<a href="/auth/logout/">Log Out</a>
+  			<div id="logoutlayer">
+				<a href="/auth/logout/">Log Out</a>
+			</div>
   	  </div>
     </header>
 
       {% block body %}{% end %}
 
     <footer>
-      For noncommercial use only (C).
+		<div id="bottomlayer">
+			Created by Chernyshov Alexey, Kravchenko Vladislav and Magomedov Murad. 2015 Innopolis University
+		</div>
     </footer>
   </body>
 </html>
