--- a/src/webapp/template/search.html
+++ b/src/webapp/template/search.html
@@ -5,16 +5,18 @@
 {% end %}
 
 {% block body %}
-<center>
-    <h1>Enter search criterias.</h1>
-    <form method="post" action="/searchresult/">
-      <p>Article id<br><input type="number" name="id"></p>
-      <p>Article title<br><input type="text" name="title"></p>
-      <p>Article author<br><input type="text" name="author"></p>
-      <p>Article venue<br><input type="text" name="venue"></p>
-      <p>Article year<br><input type="number" name="year"></p>
-      <p>Keyword<br><input type="text" name="keyword"></p>
-      <input type="submit">
-    </form>
-</center>
+<div  class="search">
+  <center>
+      <h1>Enter search criterias.</h1>
+      <form method="post" action="/searchresult/">
+        <p>Article id<br><input type="number" name="id"></p>
+        <p>Article title<br><input type="text" name="title"></p>
+        <p>Article author<br><input type="text" name="author"></p>
+        <p>Article venue<br><input type="text" name="venue"></p>
+        <p>Article year<br><input type="number" name="year"></p>
+        <p>Keyword<br><input type="text" name="keyword"></p>
+        <input type="submit">
+      </form>
+  </center>
+</div>
 {% end %}
