--- a/src/webapp/template/search.html
+++ b/src/webapp/template/search.html
@@ -1,11 +1,11 @@
 {% extends main.html %}
 
 {% block head %}
-    <title>Search result</title>
+    <title>Search</title>
 {% end %}
 
 {% block body %}
-<div  class="search">
+<div class="search">
   <center>
       <h1>Enter search criterias.</h1>
       <form method="post" action="/searchresult/">
