--- a/src/webapp/template/main.html
+++ b/src/webapp/template/main.html
@@ -10,9 +10,9 @@
   			<h1>DMD project Phase#2.</h1>
   			<a href="/search/">Search</a>
   			<a href="/addarticle/">Add Article</a>
-  			<div id="logoutlayer">
-				<a href="/auth/logout/">Log Out</a>
-			</div>
+  			 <div id="logoutlayer">
+				  <a href="/auth/logout/">Sign Out</a>
+			   </div>
   	  </div>
     </header>
 
