--- a/src/webapp/template/searchresult.html
+++ b/src/webapp/template/searchresult.html
@@ -39,14 +39,14 @@
 
       <input type="submit" value="apply">
     </form>
-
+<div class="search">
     <h2>Articles</h2>
     {% for article in articles %}
       <p><a href="/article/?id={{article[0]}}">
         id = {{article[0]}}, title = {{article[1]}}, venue = {{article[2]}}, year = {{article[3]}}
       </a></p>
     {% end %}
-
+  <div>
     <form method="post" action="/searchresult/">
       <input type="number" name="id" value="{{id}}" hidden="True">
       <input type="text" name="title" value="{{title}}" hidden="True">
@@ -58,7 +58,8 @@
       <input type="text" name="order" value="{{order}}" hidden="True">
       <input type="submit" value="<-">
     </form>
-
+  </div>
+  <div>
     <form method="post" action="/searchresult/">
       <input type="number" name="id" value="{{id}}" hidden="True">
       <input type="text" name="title" value="{{title}}" hidden="True">
@@ -70,7 +71,8 @@
       <input type="text" name="order" value="{{order}}" hidden="True">
       <input type="submit" value="->">
     </form>
-
+  </div>
+</div>
   </body>
 </html>
 
@@ -127,7 +129,7 @@
       </a></p>
     {% end %}
 
-    <form method="post" action="/searchresult/">
+    <form method="post" action="/searchresult/" class="floatleft">
       <input type="number" name="id" value="{{id}}" hidden="True">
       <input type="text" name="title" value="{{title}}" hidden="True">
       <input type="text" name="author" value="{{author}}" hidden="True">
