--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -19,11 +19,56 @@
   text-align: right;
 }
 
+#username {
+  height: 44px;
+  font-size: 16px;
+  width: 100%;
+  margin-bottom: 10px;
+  -webkit-appearance: none;
+  background: #fff;
+  border: 1px solid #d9d9d9;
+  border-top: 1px solid #c0c0c0;
+  /* border-radius: 2px; */
+  padding: 0 8px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+#username a:hover {
+  border: 1px solid #b9b9b9;
+  border-top: 1px solid #a0a0a0;
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
 #logoutlayer {
   top: 20px;
   right:20px;
   position: absolute;
   vertical-align: center;
+}
+
+#login-form {
+  padding: 30px;
+  width: 233px;
+  height: 1 00px;
+  background-color: #F7F7F7;
+  margin: 0 auto 10px;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+
+#signin-form {
+  padding: 30px;
+  width: 233px;
+  height: 1 00px;
+  background-color: #F7F7F7;
+  margin: 0 auto 10px;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
 
 .floatleft{
@@ -55,7 +100,7 @@
   position: relative;
 }
 
-.search input[type=text], input[type=password], input[type=number] {
+.search input[type=text], input[type=password], input[type=username], input[type=number] {
   height: 44px;
   font-size: 16px;
   width: 100%;
@@ -70,7 +115,7 @@
   -moz-box-sizing: border-box;
 }
 
-.search input[type=text]:hover, input[type=password]:hover {
+.search input[type=text]:hover, input[type=username]:hover, input[type=password]:hover {
   border: 1px solid #b9b9b9;
   border-top: 1px solid #a0a0a0;
   -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
