--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -76,6 +76,18 @@
   float:left;
 }
 
+.addarticle {
+  padding: 20px;
+  width: 274px;
+  height: 450px;
+  background-color: #F7F7F7;
+  margin: 0 auto 10px;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+
+
 .search {
   padding: 40px;
   width: 274px;
@@ -113,9 +125,10 @@
   padding: 0 8px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-}
+  max-height: 22px;
+  max-width: 175px;
 
-.search input[type=text]:hover, input[type=username]:hover, input[type=password]:hover {
+.search input[type=text]:hover, input[type=number]:hover, input[type=username]:hover, input[type=password]:hover {
   border: 1px solid #b9b9b9;
   border-top: 1px solid #a0a0a0;
   -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
