--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -87,6 +87,15 @@
   overflow: hidden;
 }
 
+.articleupdate {
+  padding: 20px;
+  width: 348px;
+  background-color: #F7F7F7;
+  margin: 0 auto 10px;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
 
 .search {
   padding: 40px;
