--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -1,3 +1,7 @@
+body {
+  background-image: src="{{ static_url("img/bg.jpg") }}";
+}
+
 #layer {
   top: 20px;
   right:20px;
@@ -20,6 +24,21 @@
 }
 
 #username {
+  height: 44px;
+  font-size: 16px;
+  width: 100%;
+  margin-bottom: 10px;
+  -webkit-appearance: none;
+  background: #fff;
+  border: 1px solid #d9d9d9;
+  border-top: 1px solid #c0c0c0;
+  /* border-radius: 2px; */
+  padding: 0 8px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+#password {
   height: 44px;
   font-size: 16px;
   width: 100%;
@@ -98,9 +117,9 @@
 }
 
 .search {
-  padding: 40px;
+  padding: 30px;
   width: 274px;
-  height: 700px;
+  height: 550px;
   background-color: #F7F7F7;
   margin: 0 auto 10px;
   border-radius: 2px;
