--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -117,7 +117,7 @@ body {
 }
 
 .search {
-  padding: 30px;
+  padding: 20px;
   width: 274px;
   height: 550px;
   background-color: #F7F7F7;
@@ -131,6 +131,7 @@ body {
   font-weight: 100;
   text-align: center;
   font-size: 2.3em;
+  font-weight: bold;
 }
 
 .search input[type=submit] {
