--- a/src/webapp/template/searchresult.html
+++ b/src/webapp/template/searchresult.html
@@ -56,7 +56,7 @@
       <input type="text" name="keyword" value="{{keyword}}" hidden="True">
       <input type="number" name="offset" value="{{int(offset) - 20}}" hidden="True">
       <input type="text" name="order" value="{{order}}" hidden="True">
-      <input type="submit" value="<-">
+      <input type="submit" value="Previous">
     </form>
   </div>
   <div>
@@ -69,7 +69,7 @@
       <input type="text" name="keyword" value="{{keyword}}" hidden="True">
       <input type="number" name="offset" value="{{int(offset) + 20}}" hidden="True">
       <input type="text" name="order" value="{{order}}" hidden="True">
-      <input type="submit" value="->">
+      <input type="submit" value="Next">
     </form>
   </div>
 </div>
