--- a/src/webapp/static/style.css
+++ b/src/webapp/static/style.css
@@ -13,10 +13,11 @@ body {
 }
 
 #bottomlayer {
-  position: absolute;
+  position: relative;
   bottom: 10px;
   right:10px;
   left:10px;
+  width: 98%;
   background: #f0f0f0; /* Цвет фона */
   padding: 7px; /* Поля вокруг текста */
   border: solid 1px black; /* Параметры рамки */
